# tulip

./: .gitignore  LICENSE  README.md  flake.nix  tulip.cabal
app/: Main.hs
app/compiler/: Compiler.hs  IRSyntax.hs
app/evaluator/: Evaluator.hs  Results.hs
app/ir/: Compiler.hs
app/parser/: Lexer.hs  Parser.hs  PrettyPrint.hs  Syntax.hs
tests/programs/: fac.tl  fib.tl  helloworld.tl  if.tl  lists.tl
